--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="title" content="JS QR Code Generator" />
-  <meta name="description" content="A customizable QR Code generator with styling and logo support built in JavaScript. Created by Nii Abe." />
+  <meta name="description" content="A customizable QR Code generator with styling and logo support built in JavaScript." />
   <meta name="author" content="Nii Abe" />
   <meta property="og:title" content="JS QR Code Generator" />
   <meta property="og:description" content="Generate stylish QR codes with gradient color, dot style, and logo support. Built by Nii Abe." />
